<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_ground2"
    android:tag="@string/player_fragment_tag"
    android:id="@+id/fragment_player">


    <ImageView
        android:id="@+id/detailPlayerImgView"
        android:layout_width="214dp"
        android:layout_height="257dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:src="@drawable/becker"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPlayerImgView">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView

                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/player_title_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPlayerName"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_birthdate"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPlayerBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_number"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPlayerNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_position"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPlayerPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_nationality"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPlayerNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:gravity="center_horizontal">

            <TextView

                android:id="@+id/txtPlayerProfileUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_profile_link"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profileEdtTxt"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="402dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/savePlayerButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:text="@string/save_player_details"
                android:textColor="@android:color/white"

                android:textSize="18sp" />

        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>
